k8s/media-services/lidarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media-services
  labels:
    app: lidarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: lidarr
